# BaseEqsCounter

./: .gitignore  .gitmodules  BaseEqsCounter.cpp  CMakeLists.txt  README.md
src/BaseEquation/: Equation.cpp  Equation.h
src/mainMenu/: mainMenu.cpp  mainMenu.h
